# RacoonEngine

./: .gitignore  CMakeLists.txt
assets/shaders/: default_pixel.hlsl  default_vertex.hlsl  shaders_semantics.hlsl
scripts/: generate_solution.bat  post_build.bat
src/Racoon/: GameTimer.cpp  GameTimer.h  PrimitivesGenerator.cpp  PrimitivesGenerator.h  RacoonEngine.cpp  RacoonEngine.h  RenderItem.cpp  RenderItem.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h
